# azure-container-instances-axum-api

./: Cargo.toml
.github/workflows/: ci.yaml  deploy.yml  deploy_to_azure.yaml
src/: main.rs
src/users/: model.rs  router.rs  service.rs
tests/: integration_tests.rs
