[package]
name = "hvalfangst-rust-crud-with-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hvalfangst_rust_crud_with_axum"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
axum = "0.6.2"
tower-http = { version = "0.4.0", features = ["trace"] }
tower = { version = "0.4", features = ["util"] }
hyper = "0.14"
http = "0.2.9"
regex = "1.5"

[[bin]]
name = "hvalfangst-rust-crud-with-axum"
path = "src/main.rs"

